force-app/main/default/objects/FbData__c/FbData__c.object-meta.xml
<CustomObject>
    <label>FBデータ</label>
    <nameField>
        <displayFormat>FB-{000000000}</displayFormat>
        <label>FBデータ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>