force-app/main/default/objects/FbData__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FBデータ</relationshipLabel>
    <relationshipName>AccountFB</relationshipName>
    <type>Lookup</type>
</CustomField>