force-app/main/default/objects/FbData__c/fields/BankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>BankAccountNum__c</fullName>
    <label>口座番号</label>
    <length>7</length>
    <type>Text</type>
</CustomField>