force-app/main/default/objects/FbData__c/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <label>被仕向金融機関番号</label>
    <length>4</length>
    <type>Text</type>
</CustomField>