force-app/main/default/objects/FbData__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>被仕向金融機関名</label>
    <length>15</length>
    <type>Text</type>
</CustomField>