force-app/main/default/objects/FbData__c/fields/BranchOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeCode__c</fullName>
    <label>被仕向支店番号</label>
    <length>3</length>
    <type>Text</type>
</CustomField>