force-app/main/default/objects/FbData__c/fields/BranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>BranchOfficeName__c</fullName>
    <label>被仕向支店名</label>
    <length>15</length>
    <type>Text</type>
</CustomField>