force-app/main/default/objects/FbData__c/fields/CodeCategory__c.field-meta.xml
<CustomField>
    <fullName>CodeCategory__c</fullName>
    <label>コード区分</label>
    <length>1</length>
    <type>Text</type>
</CustomField>