force-app/main/default/objects/FbData__c/fields/ConsignorCode__c.field-meta.xml
<CustomField>
    <fullName>ConsignorCode__c</fullName>
    <formula>LEFT(RemittingBranchOfficeCode__c, 2) + IF(RemitterDepositType__c = &quot;2&quot;, &quot;1&quot;, &quot;2&quot;) +  RemitterBankAccountNum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>委託者コード</label>
    <type>Text</type>
</CustomField>