force-app/main/default/objects/FbData__c/fields/ConsignorName__c.field-meta.xml
<CustomField>
    <fullName>ConsignorName__c</fullName>
    <label>委託者名</label>
    <length>40</length>
    <type>Text</type>
</CustomField>