force-app/main/default/objects/FbData__c/fields/CustomerCode1__c.field-meta.xml
<CustomField>
    <fullName>CustomerCode1__c</fullName>
    <label>顧客コード1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>