force-app/main/default/objects/FbData__c/fields/DepositType__c.field-meta.xml
<CustomField>
    <fullName>DepositType__c</fullName>
    <label>預金種目</label>
    <length>1</length>
    <type>Text</type>
</CustomField>