force-app/main/default/objects/FbData__c/fields/FbDataForeignKey__c.field-meta.xml
<CustomField>
    <fullName>FbDataForeignKey__c</fullName>
    <externalId>true</externalId>
    <label>FBデータ外部キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>