force-app/main/default/objects/FbData__c/fields/Identification__c.field-meta.xml
<CustomField>
    <fullName>Identification__c</fullName>
    <label>識別表示</label>
    <length>1</length>
    <type>Text</type>
</CustomField>