force-app/main/default/objects/FbData__c/fields/IsTransferFeeSubtracted__c.field-meta.xml
<CustomField>
    <fullName>IsTransferFeeSubtracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>振手差引済みフラグ</label>
    <type>Checkbox</type>
</CustomField>