force-app/main/default/objects/FbData__c/fields/NewCode__c.field-meta.xml
<CustomField>
    <fullName>NewCode__c</fullName>
    <label>新規コード</label>
    <length>1</length>
    <type>Text</type>
</CustomField>