force-app/main/default/objects/FbData__c/fields/PaymentCategory__c.field-meta.xml
<CustomField>
    <fullName>PaymentCategory__c</fullName>
    <label>支払区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>敷金精算</fullName>
            </value>
            <value>
                <fullName>退去精算</fullName>
            </value>
            <value>
                <fullName>通常家賃支払</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>