force-app/main/default/objects/FbData__c/fields/RecipientName__c.field-meta.xml
<CustomField>
    <fullName>RecipientName__c</fullName>
    <label>受取人名</label>
    <length>30</length>
    <type>Text</type>
</CustomField>