force-app/main/default/objects/FbData__c/fields/RemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>RemittanceDate__c</fullName>
    <label>取組日</label>
    <length>4</length>
    <type>Text</type>
</CustomField>