force-app/main/default/objects/FbData__c/fields/RemitterBankAccountNum__c.field-meta.xml
<CustomField>
    <fullName>RemitterBankAccountNum__c</fullName>
    <label>口座番号（依頼人）</label>
    <length>7</length>
    <type>Text</type>
</CustomField>