force-app/main/default/objects/FbData__c/fields/RemitterDepositType__c.field-meta.xml
<CustomField>
    <fullName>RemitterDepositType__c</fullName>
    <label>預金種目（依頼人）</label>
    <length>1</length>
    <type>Text</type>
</CustomField>