force-app/main/default/objects/FbData__c/fields/RemittingBankCode__c.field-meta.xml
<CustomField>
    <fullName>RemittingBankCode__c</fullName>
    <label>仕向金融機関番号</label>
    <length>4</length>
    <type>Text</type>
</CustomField>