force-app/main/default/objects/FbData__c/fields/RemittingBankName__c.field-meta.xml
<CustomField>
    <fullName>RemittingBankName__c</fullName>
    <label>仕向金融機関名</label>
    <length>15</length>
    <type>Text</type>
</CustomField>