force-app/main/default/objects/FbData__c/fields/RemittingBranchOfficeCode__c.field-meta.xml
<CustomField>
    <fullName>RemittingBranchOfficeCode__c</fullName>
    <label>仕向支店番号</label>
    <length>3</length>
    <type>Text</type>
</CustomField>