force-app/main/default/objects/FbData__c/fields/RemittingBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>RemittingBranchOfficeName__c</fullName>
    <label>仕向支店名</label>
    <length>15</length>
    <type>Text</type>
</CustomField>