force-app/main/default/objects/FbData__c/fields/TransferAmount__c.field-meta.xml
<CustomField>
    <fullName>TransferAmount__c</fullName>
    <label>振込金額</label>
    <length>10</length>
    <type>Text</type>
</CustomField>