force-app/main/default/objects/FbData__c/fields/TransferType__c.field-meta.xml
<CustomField>
    <fullName>TransferType__c</fullName>
    <label>振込区分</label>
    <length>1</length>
    <type>Text</type>
</CustomField>