force-app/main/default/objects/FbData__c/fields/TypeCode__c.field-meta.xml
<CustomField>
    <fullName>TypeCode__c</fullName>
    <label>種別コード</label>
    <length>2</length>
    <type>Text</type>
</CustomField>